# cfmt

./: CMakeLists.txt  readme.md
include/: cfmt.hpp
include/cfmt/: cfmt.hpp  formatter.hpp  indexable.hpp  string.hpp  view.hpp
include/cfmt/group/: bad_match.hpp  bad_match_access.hpp  blueprint.hpp  cache.hpp  match.hpp
include/cfmt/sign/: blueprint.hpp  exceptions.hpp  match.hpp
test/: base.hpp  formatter.cpp  general.cpp  group.cpp  sign.cpp  simple_format.cpp  view.cpp
